# neuron_slop

./: brain  brain.cpp  brain2  brain2.cpp  brain3  brain3.cpp  neurons.py  neurons_live.html
brain5/engine/: brain.h  test.cpp  test_brain
petri/: CMakeLists.txt  main.cpp
petri/src/brain/: brain_config.h  brain_pool.cu  brain_pool.h
petri/src/creature/: creature.h
petri/src/render/: raylib_renderer.cpp  renderer.h
petri/src/sim/: simulation.cpp  simulation.h
petri/src/world/: world.cpp  world.h
